correct colors and spacing

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,4 +1,5 @@
-$black: #212d40;
-$blue: #5764f7;
-$purple: #9c447f;
-$light-purple: rgba(87, 100, 247, 0.08);
+$dark-blue: #212d40;
+$light-blue: #5764f7;
+$purple-blue: #abb1fb;
+$lavender: #503875;
+$magenta: #9c447f;
